@@ -44,6 +44,7 @@ namespace NSLU2Image {
 		virtual void Rewind(void) = 0;
 
 		/*-
+		 * le               - true to build a little endian image
 		 * k(kernel)        - file containing a kernel image
 		 * nr(noramdisk)    - causes the image to contain a zero length ramdisk
 		 * ram(ramdisk)     - the ramdisk image (if nr this is just a payload)
@@ -53,7 +54,7 @@ namespace NSLU2Image {
 		 * Synthesises an image and writes this to flash (never overwrites the
 		 * boot loader).
 		 */
-		static Image *MakeImage(const char *k, bool nr, const char *ram,
+		static Image *MakeImage(bool le, const char *k, bool nr, const char *ram,
 			const char *root, const char *fis,
 			unsigned short product_id, unsigned short protocol_id,
 			unsigned short firmware_version, unsigned short extra_version);
