@@ -1,1 +1,3 @@
 initial      Initial version
+
+upslug2_6    Added LE support
